# openapi.json
@@ -2324,6 +2324,10 @@
               "description": "",
               "deprecated": false,
               "properties": {
+                  "id": {
+                      "readOnly": true,
+                      "type": "integer"
+                  },
                   "email": {
                       "type": "string"
                   },
@@ -2340,6 +2344,21 @@
                           "null"
                       ],
                       "format": "date-time"
+                  },
+                  "updatedAt": {
+                      "type": [
+                          "string",
+                          "null"
+                      ],
+                      "format": "date-time"
+                  },
+                  "client": {
+                      "type": [
+                          "string",
+                          "null"
+                      ],
+                      "format": "iri-reference",
+                      "example": "https://example.com/"
                   }
               }
           },
